--- a/test/meson.build
+++ b/test/meson.build
@@ -45,6 +45,6 @@ tests = {
 
 foreach arch, atests : tests
   foreach t : atests
-    test(t, go, args: ['run', 'runtest.go', '-arch', arch, lfi_leg, t], workdir: meson.current_source_dir(), suite: ['lfi-leg', arch], protocol: 'tap')
+    test(t, go, args: ['run', 'runtest.go', '-arch', arch, lfi_leg, t], workdir: meson.current_source_dir(), suite: ['lfi-rewrite', arch], protocol: 'tap')
   endforeach
 endforeach
